@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  16 Aug 2006; Roy Marples <uberlord@gentoo.org>:
+
+    /sys/class/net/$iface/wireless means it's a wireless device too in
+    iwconfig.sh and wpa_supplicant.sh
+
   15 Aug 2006; Roy Marples <uberlord@gentoo.org>:
 
     Fix start-stop-daemon using the --name option
